--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -29,7 +29,7 @@
                 <span [innerHTML]="exercise.problemStatement! | htmlForMarkdown"></span>
             </h6>
             <!-- Show submission of student - if no submission found -> display that student did not participate -->
-            <ng-container *ngIf="getParticipationForExercise(exercise) && getSubmissionForExercise(exercise); else noSubmission">
+            <ng-container *ngIf="getParticipationForExercise(exercise) && getSubmissionForExercise(exercise) && getSubmissionForExercise(exercise).submitted; else noSubmission">
                 <!-- Text Exercise -->
                 <ng-container *ngIf="exercise.type === TEXT">
                     <jhi-text-exam-summary [submission]="getSubmissionForExercise(exercise)"></jhi-text-exam-summary>
