Added achieved score to table and csv

--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -99,6 +99,8 @@
                             {{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].title }}
                             :
                             {{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].achievedPoints }}
+
+                            ({{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].achievedScore }} %)
                         </td>
                         <ng-template #empty>
                             <td>
