--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -1,118 +1,126 @@
-<div *ngIf="examScoreDTO">
+<div>
     <jhi-alert></jhi-alert>
-    <h4>
-        {{ examScoreDTO.title }}
-    </h4>
-    <h4>{{ examScoreDTO.maxPoints }} Points achievable</h4>
-    <h3>
-        <small jhiTranslate="artemisApp.examScores.examResultSummary" [translateValues]="{ exercisesLength: exerciseGroups.length, studentsLength: studentResults.length }">
-            {{ exerciseGroups.length }} exercise groups, {{ studentResults.length }} registered students
-        </small>
-        <button (click)="exportToCsv()" class="btn btn-primary btn-sm float-right">
-            <fa-icon [icon]="'download'" [fixedWidth]="true"></fa-icon>
-            <span jhiTranslate="artemisApp.examScores.exportCSV">&nbsp;Export Results as CSV</span>
-        </button>
-    </h3>
-
-    <!-- Exercise Groups Statistics Table -->
-    <div class="table-responsive table-bordered table-hover">
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Contained exercises
-                    </th>
-                    <th>
-                        Average points achieved
-                    </th>
-                    <th>
-                        Maximum points achievable
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let exerciseGroup of examScoreDTO.exerciseGroups">
-                    <td>{{ exerciseGroup.title }}</td>
-                    <td>
-                        <ul class="list-group list-group-flush">
-                            <li *ngFor="let exerciseTitle of exerciseGroup.containedExercises" class="list-group-item">
-                                {{ exerciseTitle }}
-                            </li>
-                        </ul>
-                    </td>
-                    <td>{{ exerciseGroup.averagePointsAchieved ? exerciseGroup.averagePointsAchieved : '-' }}</td>
-                    <td>{{ exerciseGroup.maxPoints ? exerciseGroup.maxPoints : '-' }}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div *ngIf="isLoading" class="d-flex justify-content-center">
+        <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
     </div>
 
-    <!-- Student Result Table -->
+    <div *ngIf="!isLoading">
+        <h4>
+            {{ examScoreDTO.title }}
+        </h4>
+        <h4>{{ examScoreDTO.maxPoints }} Points achievable</h4>
+        <h3>
+            <small jhiTranslate="artemisApp.examScores.examResultSummary" [translateValues]="{ exercisesLength: exerciseGroups.length, studentsLength: studentResults.length }">
+                {{ exerciseGroups.length }} exercise groups, {{ studentResults.length }} registered students
+            </small>
+            <button (click)="exportToCsv()" class="btn btn-primary btn-sm float-right">
+                <fa-icon [icon]="'download'" [fixedWidth]="true"></fa-icon>
+                <span jhiTranslate="artemisApp.examScores.exportCSV">&nbsp;Export Results as CSV</span>
+            </button>
+        </h3>
 
-    <div class="table-responsive table-bordered table-hover">
-        <table class="table table-striped">
-            <thead class="thead-dark">
-                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="sortRows.bind(this)">
-                    <th jhiSortBy="name">
-                        <span jhiTranslate="artemisApp.examScores.name">Name</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                    <th jhiSortBy="login">
-                        <span jhiTranslate="artemisApp.examScores.login">Login</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                    <th jhiSortBy="eMail">
-                        <span jhiTranslate="artemisApp.examScores.eMail">E-Mail</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                    <th jhiSortBy="registrationNumber">
-                        <span jhiTranslate="artemisApp.examScores.registrationNumber">Registration Number</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                    <ng-container *ngFor="let exerciseGroup of examScoreDTO.exerciseGroups">
-                        <th [jhiSortBy]="'exerciseGroupIdToExerciseResult.' + exerciseGroup.id + '.achievedPoints'">
-                            <span>{{ exerciseGroup.title }}</span>
+        <!-- Exercise Groups Statistics Table -->
+        <div class="table-responsive table-bordered table-hover">
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>
+                            Name
+                        </th>
+                        <th>
+                            Contained exercises
+                        </th>
+                        <th>
+                            Average points achieved
+                        </th>
+                        <th>
+                            Maximum points achievable
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let exerciseGroup of examScoreDTO.exerciseGroups">
+                        <td>{{ exerciseGroup.title }}</td>
+                        <td>
+                            <ul class="list-group list-group-flush">
+                                <li *ngFor="let exerciseTitle of exerciseGroup.containedExercises" class="list-group-item">
+                                    {{ exerciseTitle }}
+                                </li>
+                            </ul>
+                        </td>
+                        <td>{{ exerciseGroup.averagePointsAchieved ? exerciseGroup.averagePointsAchieved : '-' }}</td>
+                        <td>{{ exerciseGroup.maxPoints ? exerciseGroup.maxPoints : '-' }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Student Result Table -->
+
+        <div class="table-responsive table-bordered table-hover">
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                    <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="sortRows.bind(this)">
+                        <th jhiSortBy="name">
+                            <span jhiTranslate="artemisApp.examScores.name">Name</span>
                             <fa-icon [icon]="'sort'"></fa-icon>
                         </th>
-                    </ng-container>
-                    <th jhiSortBy="overallPointsAchieved">
-                        <span jhiTranslate="artemisApp.examScores.overallPoints">Overall Points</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
+                        <th jhiSortBy="login">
+                            <span jhiTranslate="artemisApp.examScores.login">Login</span>
+                            <fa-icon [icon]="'sort'"></fa-icon>
+                        </th>
+                        <th jhiSortBy="eMail">
+                            <span jhiTranslate="artemisApp.examScores.eMail">E-Mail</span>
+                            <fa-icon [icon]="'sort'"></fa-icon>
+                        </th>
+                        <th jhiSortBy="registrationNumber">
+                            <span jhiTranslate="artemisApp.examScores.registrationNumber">Registration Number</span>
+                            <fa-icon [icon]="'sort'"></fa-icon>
+                        </th>
+                        <ng-container *ngFor="let exerciseGroup of examScoreDTO.exerciseGroups">
+                            <th [jhiSortBy]="'exerciseGroupIdToExerciseResult.' + exerciseGroup.id + '.achievedPoints'">
+                                <span>{{ exerciseGroup.title }}</span>
+                                <fa-icon [icon]="'sort'"></fa-icon>
+                            </th>
+                        </ng-container>
+                        <th jhiSortBy="overallPointsAchieved">
+                            <span jhiTranslate="artemisApp.examScores.overallPoints">Overall Points</span>
+                            <fa-icon [icon]="'sort'"></fa-icon>
+                        </th>
 
-                    <th jhiSortBy="overallPointsAchieved">
-                        <span>Overall Score (%)</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let studentResult of studentResults">
-                    <td>{{ studentResult.name }}</td>
-                    <td>{{ studentResult.login }}</td>
-                    <td>{{ studentResult.eMail ? studentResult.eMail : '-' }}</td>
-                    <td>{{ studentResult.registrationNumber ? studentResult.registrationNumber : '-' }}</td>
-                    <ng-container *ngFor="let exerciseGroup of examScoreDTO.exerciseGroups">
-                        <td *ngIf="studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id]; else empty">
-                            {{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].title }}
-                            :
-                            {{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].achievedPoints }}
+                        <th jhiSortBy="overallPointsAchieved">
+                            <span>Overall Score (%)</span>
+                            <fa-icon [icon]="'sort'"></fa-icon>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let studentResult of studentResults">
+                        <td>{{ studentResult.name }}</td>
+                        <td>{{ studentResult.login }}</td>
+                        <td>{{ studentResult.eMail ? studentResult.eMail : '-' }}</td>
+                        <td>{{ studentResult.registrationNumber ? studentResult.registrationNumber : '-' }}</td>
+                        <ng-container *ngFor="let exerciseGroup of examScoreDTO.exerciseGroups">
+                            <td *ngIf="studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id]; else empty">
+                                {{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].title }}
+                                :
+                                {{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].achievedPoints }}
 
-                            ({{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].achievedScore }} %)
-                        </td>
-                        <ng-template #empty>
-                            <td>
-                                -
+                                ({{ studentResult.exerciseGroupIdToExerciseResult[exerciseGroup.id].achievedScore }} %)
                             </td>
-                        </ng-template>
-                    </ng-container>
-                    <td>{{ studentResult.overallPointsAchieved ? studentResult.overallPointsAchieved : '-' }}</td>
-                    <td>{{ studentResult.overallScoreAchieved ? studentResult.overallScoreAchieved : '-' }}</td>
-                </tr>
-            </tbody>
-        </table>
+                            <ng-template #empty>
+                                <td>
+                                    -
+                                </td>
+                            </ng-template>
+                        </ng-container>
+                        <td>{{ studentResult.overallPointsAchieved ? studentResult.overallPointsAchieved : '-' }}</td>
+                        <td>{{ studentResult.overallScoreAchieved ? studentResult.overallScoreAchieved : '-' }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
