change action to always pull make refreshing an editorState not commitState

--- a/src/main/webapp/app/exercises/programming/manage/code-editor/code-editor-instructor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/code-editor/code-editor-instructor-container.component.html
@@ -156,6 +156,7 @@
         [selectedFile]="selectedFile"
         [fileChange]="fileChange"
         [commitState]="commitState"
+        [editorState]="editorState"
         [(buildLogErrors)]="buildLogErrors"
         (onFileContentChange)="onFileContentChange($event)"
         (onError)="onError($event)"
