--- a/src/main/webapp/app/exercises/programming/shared/code-editor/actions/code-editor-actions.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/actions/code-editor-actions.component.html
@@ -22,16 +22,16 @@
         type="button"
         class="btn btn-primary navbar-btn mr-3"
         [jhiFeatureToggle]="FeatureToggle.PROGRAMMING_EXERCISES"
-        [overwriteDisabled]="disableActions || isBuilding || commitState === CommitState.REFRESHING || editorState === EditorState.SAVING || commitState === CommitState.COMMITTING"
+        [overwriteDisabled]="disableActions || isBuilding || editorState === EditorState.REFRESHING || editorState === EditorState.SAVING || commitState === CommitState.COMMITTING"
         (click)="onRefresh()"
         data-toggle="tooltip"
         data-placement="left"
         title="Refresh all files. This will overwrite all uncommitted changes."
     >
-        <span *ngIf="commitState === CommitState.REFRESHING">
+        <span *ngIf="editorState === EditorState.REFRESHING">
             <fa-icon [icon]="'circle-notch'" [spin]="true"></fa-icon> <span jhiTranslate="artemisApp.editor.refreshing">Refreshing</span>
         </span>
-        <span *ngIf="commitState !== CommitState.REFRESHING"
+        <span *ngIf="editorState !== EditorState.REFRESHING"
             ><fa-icon [icon]="['fas', 'sync']"></fa-icon> <span jhiTranslate="artemisApp.editor.refresh.performRefresh">Refresh</span></span
         >
     </button>
@@ -43,8 +43,8 @@
         [overwriteDisabled]="
             disableActions ||
             editorState !== EditorState.UNSAVED_CHANGES ||
+            editorState === EditorState.REFRESHING ||
             commitState === CommitState.COMMITTING ||
-            commitState === CommitState.REFRESHING ||
             commitState === CommitState.COULD_NOT_BE_RETRIEVED ||
             commitState === CommitState.UNDEFINED
         "
@@ -64,7 +64,11 @@
         class="guided-tour-submit-button btn btn-success navbar-btn"
         [jhiFeatureToggle]="FeatureToggle.PROGRAMMING_EXERCISES"
         [overwriteDisabled]="
-            disableActions || isBuilding || editorState === EditorState.SAVING || (commitState !== CommitState.UNCOMMITTED_CHANGES && commitState !== CommitState.CLEAN)
+            disableActions ||
+            isBuilding ||
+            editorState === EditorState.REFRESHING ||
+            editorState === EditorState.SAVING ||
+            (commitState !== CommitState.UNCOMMITTED_CHANGES && commitState !== CommitState.CLEAN)
         "
         (click)="commit()"
         data-toggle="tooltip"
