--- a/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-update.component.html
@@ -1,9 +1,12 @@
 <form name="editForm markdown-preview" role="form" novalidate #editForm="ngForm">
     <div>
-        <h4 *ngIf="!modelingExercise.id; else editExercise" id="myModelingExerciseLabel" jhiTranslate="artemisApp.modelingExercise.home.createLabel">
+        <h4 *ngIf="!modelingExercise.id" id="jhi-modeling-exercise-heading-create" jhiTranslate="artemisApp.modelingExercise.home.createLabel">
             Create a new Modeling Exercise
         </h4>
-        <ng-template #editExercise><h4 jhiTranslate="artemisApp.modelingExercise.home.editLabel">Edit a Modeling Exercise</h4></ng-template>
+        <h4 *ngIf="!isImport && modelingExercise.id" id="jhi-modeling-exercise-heading-edit" jhiTranslate="artemisApp.modelingExercise.home.editLabel">
+            Edit a Modeling Exercise
+        </h4>
+        <h4 *ngIf="isImport" id="jhi-modeling-exercise-heading-import" jhiTranslate="artemisApp.modelingExercise.home.importLabel"></h4>
     </div>
     <div>
         <jhi-alert></jhi-alert>
@@ -16,7 +19,7 @@
             <label class="form-control-label" jhiTranslate="artemisApp.exercise.title" for="field_title">Title</label>
             <input required type="text" class="form-control" name="title" id="field_title" [(ngModel)]="modelingExercise.title" />
         </div>
-        <div class="form-group-narrow position-relative">
+        <div *ngIf="!isExamMode" class="form-group-narrow position-relative">
             <label class="form-control-label" jhiTranslate="artemisApp.exercise.categories">Categories</label>
             <jhi-category-selector
                 [exerciseCategories]="exerciseCategories"
@@ -78,7 +81,14 @@
         </div>
         <div class="form-group-narrow">
             <label class="form-control-label" jhiTranslate="artemisApp.modelingExercise.diagramType" for="field_diagramType">Diagram Type</label>
-            <select class="form-control" name="diagramType" [(ngModel)]="modelingExercise.diagramType" (ngModelChange)="diagramTypeChanged()" id="field_diagramType">
+            <select
+                [disabled]="isImport || modelingExercise.id"
+                class="form-control"
+                name="diagramType"
+                [(ngModel)]="modelingExercise.diagramType"
+                (ngModelChange)="diagramTypeChanged()"
+                id="field_diagramType"
+            >
                 <option value="ClassDiagram">{{ 'artemisApp.DiagramType.ClassDiagram' | translate }}</option>
                 <option value="ActivityDiagram">{{ 'artemisApp.DiagramType.ActivityDiagram' | translate }}</option>
                 <option value="ObjectDiagram">{{ 'artemisApp.DiagramType.ObjectDiagram' | translate }}</option>
@@ -97,6 +107,7 @@
                     (ngModelChange)="modelingExercise.assessmentType = $event ? AssessmentType.SEMI_AUTOMATIC : AssessmentType.MANUAL"
                     class="form-check-input custom-control-input"
                     name="automaticAssessmentEnabled"
+                    [disabled]="isImport"
                 />
                 <label class="form-check-label custom-control-label" for="automatic_assessment_enabled" jhiTranslate="artemisApp.textExercise.automaticAssessmentEnabled"></label>
             </div>
@@ -125,7 +136,7 @@
         <div class="form-group">
             <span jhiTranslate="artemisApp.modelingExercise.exampleSolution">Example Solution</span>
             <ul>
-                <li *ngIf="modelingExercise.id && modelingExercise.sampleSolutionModel">
+                <li *ngIf="modelingExercise.sampleSolutionModel">
                     <button
                         [routerLink]="['/course-management', modelingExercise.course?.id, 'modeling-exercises', modelingExercise.id, 'example-solution']"
                         class="btn btn-link"
@@ -137,18 +148,18 @@
                 </li>
             </ul>
             <button
-                *ngIf="modelingExercise.id && !modelingExercise.sampleSolutionModel"
+                *ngIf="modelingExercise.id && !modelingExercise.sampleSolutionModel && !isImport"
                 class="btn btn-primary"
                 [routerLink]="['/course-management', modelingExercise.course?.id, 'modeling-exercises', modelingExercise.id, 'example-solution']"
                 jhiTranslate="artemisApp.modelingExercise.createExampleSolution"
             >
                 Create example solution
             </button>
-            <div class="alert alert-info" *ngIf="!modelingExercise.id" jhiTranslate="artemisApp.modelingExercise.exampleSolutionRequiresExercise">
+            <div class="alert alert-info" *ngIf="!modelingExercise.id || isImport" jhiTranslate="artemisApp.modelingExercise.exampleSolutionRequiresExercise">
                 To create an example solution, you first need to finish creating the modeling exercise
             </div>
         </div>
-        <div class="form-group" name="exampleSolutionExplanation" id="field_exampleSolutionExplanation">
+        <div *ngIf="!isImport" class="form-group" name="exampleSolutionExplanation" id="field_exampleSolutionExplanation">
             <label class="form-control-label" jhiTranslate="artemisApp.modelingExercise.exampleSolutionExplanation" for="field_exampleSolutionExplanation">
                 Example Solution Explanation
             </label>
@@ -165,7 +176,7 @@
             <ul *ngIf="modelingExercise.id">
                 <li *ngFor="let exampleSubmission of modelingExercise.exampleSubmissions; let i = index">
                     <button
-                        [routerLink]="['/course-management', modelingExercise.course?.id, 'modeling-exercises', modelingExercise.id, 'example-submissions', exampleSubmission.id]"
+                        [routerLink]="['/course-management', examCourseId, 'modeling-exercises', modelingExercise.id, 'example-submissions', exampleSubmission.id]"
                         class="btn btn-link"
                         type="button"
                         jhiTranslate="artemisApp.modelingExercise.exampleSubmission"
@@ -180,14 +191,14 @@
                         style="margin-left: 10px;"
                         title="An assessment is available"
                     ></fa-icon>
-                    <button class="btn btn-danger" (click)="deleteExampleSubmission(exampleSubmission.id, i)">
+                    <button *ngIf="!isImport" class="btn btn-danger" (click)="deleteExampleSubmission(exampleSubmission.id, i)">
                         <fa-icon [icon]="'ban'"></fa-icon>
                     </button>
                 </li>
             </ul>
 
             <button
-                *ngIf="modelingExercise.id"
+                *ngIf="modelingExercise.id && !isImport"
                 class="btn btn-primary"
                 [routerLink]="['/course-management', modelingExercise.course?.id, 'modeling-exercises', modelingExercise.id, 'example-submissions', 'new']"
                 jhiTranslate="artemisApp.modelingExercise.createExampleSubmission"
@@ -195,11 +206,11 @@
                 Create example submission
             </button>
 
-            <div class="alert alert-info mt-3" *ngIf="!modelingExercise.id" jhiTranslate="artemisApp.modelingExercise.exampleSubmissionsRequireExercise">
+            <div class="alert alert-info mt-3" *ngIf="!modelingExercise.id || isImport" jhiTranslate="artemisApp.modelingExercise.exampleSubmissionsRequireExercise">
                 To create an example submission, you first need to finish creating the modeling exercise
             </div>
         </div>
-        <div class="form-group" *ngIf="modelingExercise.id">
+        <div class="form-group" *ngIf="modelingExercise.id && !isImport">
             <label class="form-control-label" jhiTranslate="artemisApp.exercise.notificationText" for="field_notification_text">Notification Text</label>
             <input minlength="3" type="text" class="form-control" name="notificationtText" id="field_notification_text" [(ngModel)]="notificationText" />
         </div>
