[Exam] Include last commit hash in exam summary (#1786)
Co-authored-by: Stephan Krusche <krusche@in.tum.de>
Co-authored-by: Jan Philip Bernius <janphilip.bernius@tum.de>

--- a/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
@@ -3,4 +3,7 @@
     <span>
         <a href="{{ this.participation?.repositoryUrl }}" target="_blank" rel="noopener noreferrer">{{ this.participation?.repositoryUrl }}</a>
     </span>
+    <br />
+    <span>{{ 'artemisApp.exam.examSummary.lastCommitHash' | translate }}:</span>
+    <span [title]="this.submission.commitHash">{{ (submission.commitHash | slice: 0:7) || ('artemisApp.exam.examSummary.noCommitHash' | translate) }}</span>
 </h6>
