--- a/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
@@ -5,5 +5,5 @@
     </span>
     <br />
     <span>{{ 'artemisApp.exam.examSummary.lastCommitHash' | translate }}:</span>
-    <span [title]="this.submission.commitHash">{{ (submission.commitHash | slice: 0:7) || ('artemisApp.exam.examSummary.noCommitHash' | translate) }}</span>
+    <span [title]="this.submission?.commitHash">{{ (submission?.commitHash | slice: 0:7) || ('artemisApp.exam.examSummary.noCommitHash' | translate) }}</span>
 </h6>
