small usability improvements

--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -93,16 +93,16 @@
                         </td>
                         <td class="d-flex justify-content-end">
                             <div class="btn-group">
-                                <button class="btn btn-primary btn-sm mr-1 mb-1" style="border: 4px;">
+                                <button class="btn btn-primary btn-sm mr-1 mb-1" style="border: 4px;" disabled>
                                     <span jhiTranslate="artemisApp.studentExamDetail.openSubmission">Open Submission</span>
                                     <!-- TODO Open Submission -->
                                 </button>
-                                <button class="btn btn-warning btn-sm mr-1 mb-1" style="border: 4px;">
+                                <button class="btn btn-warning btn-sm mr-1 mb-1" style="border: 4px;" disabled>
                                     <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>
                                     <span jhiTranslate="artemisApp.studentExamDetail.openAssessment">&nbsp;Open Assessment</span>
                                     <!-- TODO Open Assessment -->
                                 </button>
-                                <button class="btn btn-danger btn-sm mr-1 mb-1">
+                                <button class="btn btn-danger btn-sm mr-1 mb-1" disabled>
                                     <fa-icon [icon]="'ban'" [fixedWidth]="true"></fa-icon>
                                     <span jhiTranslate="artemisApp.studentExamDetail.cancelAssessment">&nbsp;Cancel Assessment</span>
                                     <!-- TODO Cancel Assessment -->
