other texts for instructor view

--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -115,3 +115,4 @@
         </div>
     </div>
 </div>
+<jhi-exam-participation-summary [studentExam]="studentExam" [instructorView]="true"></jhi-exam-participation-summary>
