fix LTI configuration popup and change it to a normal page

--- a/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.html
@@ -129,7 +129,7 @@
                 </dd>
                 <dt><span jhiTranslate="artemisApp.exerciseLtiConfiguration.lti">LTI</span></dt>
                 <dd>
-                    <a [routerLink]="['/', { outlets: { popup: 'exercise/' + programmingExercise.id + '/lti-configuration' } }]">LTI Configuration</a>
+                    <a [routerLink]="['/course-management', programmingExercise.course?.id, 'exercises', programmingExercise.id, 'lti-configuration']">LTI Configuration</a>
                 </dd>
                 <dt><span jhiTranslate="artemisApp.programmingExercise.templateResult">Template Result</span></dt>
                 <dd>
