--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -117,6 +117,12 @@
                         <th>
                             <span>{{ 'artemisApp.examManagement.exerciseGroup.maxPoints' | translate }}</span>
                         </th>
+                        <th>
+                            <span>{{ 'artemisApp.exercise.releaseDate' | translate }}</span>
+                        </th>
+                        <th>
+                            <span>{{ 'artemisApp.exercise.dueDate' | translate }}</span>
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -133,6 +139,12 @@
                         </td>
                         <td class="align-middle">
                             {{ exercise.maxScore }}
+                        </td>
+                        <td class="align-middle">
+                            {{ exercise.releaseDate | artemisDate }}
+                        </td>
+                        <td class="align-middle">
+                            {{ exercise.dueDate | artemisDate }}
                         </td>
                         <td class="d-flex justify-content-end">
                             <jhi-exercise-row-buttons
